--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Alex Suomalainen" />
 
 
 <title>IODS course project</title>
@@ -380,6 +381,7 @@ summary {
 
 
 <h1 class="title toc-ignore">IODS course project</h1>
+<h4 class="author">Alex Suomalainen</h4>
 
 </div>
 
@@ -397,12 +399,14 @@ summary {
 </div>
 <div id="about-the-project" class="section level1">
 <h1>About the project</h1>
-<p><em>Write a short description about the course and add a link to your GitHub repository here. This is an R Markdown (.Rmd) file so you should use R Markdown syntax.</em></p>
+<p>I’m eager to start this course. This course was recommended to me by my thesis supervisor. I hope this helps me with <strong>my thesis</strong> and gives me tools for <strong>doing research on my own.</strong></p>
+<p>I’m also interested in coding generally. It’s fascinating how much different things you can do eg: create <strong>websites</strong>, <strong>apps</strong>, <strong>plots</strong> and <strong>analyze data</strong>.</p>
+<p>I have some experience with RStudio, but I’m pretty much still a <em>novice</em>.</p>
+<p><a href="https://suomppi.github.io/IODS-project/" class="uri">https://suomppi.github.io/IODS-project/</a></p>
 <pre class="r"><code># This is a so-called &quot;R chunk&quot; where you can write R code.
 
 date()</code></pre>
-<pre><code>## [1] &quot;Tue Oct 20 13:26:17 2020&quot;</code></pre>
-<p>The text continues here.</p>
+<pre><code>## [1] &quot;Thu Oct 29 18:52:43 2020&quot;</code></pre>
 <hr />
 </div>
 <div id="insert-chapter-2-title-here" class="section level1">
@@ -414,7 +418,7 @@ date()</code></pre>
 <li>Assume the reader has no previous knowledge of your data or the more advanced methods you are using.</li>
 </ul>
 <pre class="r"><code>date()</code></pre>
-<pre><code>## [1] &quot;Tue Oct 20 13:26:17 2020&quot;</code></pre>
+<pre><code>## [1] &quot;Thu Oct 29 18:52:43 2020&quot;</code></pre>
 <p>Here we go again…</p>
 <hr />
 <p>(more chapters to be added similarly as we proceed with the course!)</p>
