--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ summary {
 <ul>
 <li><a href="#introduction-to-open-data-science---course-project">Introduction to Open Data Science - Course Project</a></li>
 <li><a href="#about-the-project">About the project</a></li>
-<li><a href="#insert-chapter-2-title-here">Insert chapter 2 title here</a></li>
+<li><a href="#regression-and-model-validation">Regression and model validation</a></li>
 </ul>
 </div>
 
@@ -406,20 +406,12 @@ summary {
 <pre class="r"><code># This is a so-called &quot;R chunk&quot; where you can write R code.
 
 date()</code></pre>
-<pre><code>## [1] &quot;Thu Oct 29 18:52:43 2020&quot;</code></pre>
+<pre><code>## [1] &quot;Fri Nov 06 00:57:21 2020&quot;</code></pre>
 <hr />
 </div>
-<div id="insert-chapter-2-title-here" class="section level1">
-<h1>Insert chapter 2 title here</h1>
-<p><em>Describe the work you have done this week and summarize your learning.</em></p>
-<ul>
-<li>Describe your work and results clearly.</li>
-<li>Assume the reader has an introductory course level understanding of writing and reading R code as well as statistical methods.</li>
-<li>Assume the reader has no previous knowledge of your data or the more advanced methods you are using.</li>
-</ul>
-<pre class="r"><code>date()</code></pre>
-<pre><code>## [1] &quot;Thu Oct 29 18:52:43 2020&quot;</code></pre>
-<p>Here we go again…</p>
+<div id="regression-and-model-validation" class="section level1">
+<h1>Regression and model validation</h1>
+<p>I got through the data wrangling part, but I underestimated the time the analysis part took, and I couldn’t get it finished in time. I will do the last parts in the weekend :D It was nice to get into action this week. The datacamp exercises were really helpful with this one. I used only the methods datacamp used so there shouldn’t be anything too crazy going on in my file :)</p>
 <hr />
 <p>(more chapters to be added similarly as we proceed with the course!)</p>
 </div>
